tests/baselines/reference/checkSuperCallBeforeThisAccessing5.errors.txt
checkSuperCallBeforeThisAccessing5.ts(1,27): error TS7019: Rest parameter 'arg' implicitly has an 'any[]' type.
checkSuperCallBeforeThisAccessing5.ts(5,15): error TS17009: 'super' must be called before accessing 'this' in the constructor of a derived class.


==== checkSuperCallBeforeThisAccessing5.ts (2 errors) ====
    class Based { constructor(...arg) { } }
                              ~~~~~~
!!! error TS7019: Rest parameter 'arg' implicitly has an 'any[]' type.
    class Derived extends Based {
        public x!: number;
        constructor() {
            super(this.x);
                  ~~~~
!!! error TS17009: 'super' must be called before accessing 'this' in the constructor of a derived class.
        }
    }